example-ingress-annotated-ssl.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
  # name: flask-app-ingress
spec:
  # rules:
  # - host: flaskapp.example.com
    # http:
      # paths:
      # - pathType: Prefix
        # path: "/"
        # backend:
          # service:
            # name: flask-service
            # port:
              # number: 5000

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - example.com
    secretName: example-tls
  rules:
  - host: example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: example-service
            port:
              number: 80
